grammar.txt
program ::= {statement}
statement ::=
| "PRINT" (expression | string) newline
| "LET" ident "=" expression newline
| "IF" comparison "THEN" newline {statement} "ENDIF" newline
| "WHILE" comparison "REPEAT" newline {statement} "ENDWHILE" newline
| "FOR" ident "=" number "TO" number {statement} "NEXT" newline
| "GOTO" ident newline
| "INPUT" ident newline
comparison ::= expression (("==" | "!=" | ">" | ">=" | "<" | "<=") expression)+
expression ::= term {( "-" | "+" ) term}
term ::= unary {( "/" | "\*" ) unary}
unary ::= ["+" | "-"] primary
primary ::= number | ident
newline ::= '\n'+

[] -> zero or one
{} -> zero or more
+ -> one or more
() -> grouping
